# airflow-demo

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
dags/assignment_processor/: etl.py
dags/connections/google-cloud-storage/: tapd-demo-11541f71287e.json
logs/scheduler/: latest
